--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ strong{
 
 .apresentacao{
     display: flex;
-    align-items: center;
     justify-content: space-between;
     padding: 10% ;
 }
@@ -26,14 +25,13 @@ strong{
 .foto{
     height: 28vh;
     border-radius: 300px;
+    border: 2px solid rgb(246, 242, 242);
 }
 
 .apresentacao__conteudo{
     width: 50vw;
     height: 100vh;
     flex-direction: column;
-    
-    
 }
 
 .apresentacao__conteudo__titulo{
