--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    /* height: 100vh; */
+    height: 100vh; 
     box-sizing :border-box border-box;
     background-color: hwb(0 0% 100% / 0.761);
     color:rgba(223, 157, 16, 0.856) ;
@@ -19,7 +19,7 @@ strong{
 .apresentacao{
     display: flex;
     justify-content: space-between;
-    padding: 10% ;
+    padding: 5% 10% ;
 }
 
 .foto{
@@ -28,10 +28,10 @@ strong{
     border: 2px solid rgb(246, 242, 242);
 }
 
+
 .apresentacao__conteudo{
-    width: 50vw;
-    height: 100vh;
     flex-direction: column;
+
 }
 
 .apresentacao__conteudo__titulo{
@@ -40,7 +40,6 @@ strong{
 }
 
 .apresentacao__conteudo__paragrafo{
-    
 }
 
 .apresentacao__conteudo__links{
@@ -78,7 +77,25 @@ strong{
 .rodape{
    color: rgba(250, 247, 247, 0.913); 
    background-color: #00AFE0;
-   padding: 15px;
+   padding: 5px;
    text-align: center;
    font-size: 20px;
+}
+
+.cabecalho{
+    padding: 2% 0% 0% 10%;
+}
+
+.cabecalho__menu{
+    display: flex;
+    gap: 80px;
+
+
+}
+
+.cabecalho__menu__link{
+    font-size: 20px;
+    text-decoration: none;
+    color: #00AFE0;
+     
 }
