--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,13 @@
+
+:root{
+    --cor-1: #000000cf;
+    --cor-2: #df9d10da ;
+    --cor-3: #fdfafa;
+    --cor-4: #e85703d6;
+    --cor-5: #00AFE0;
+} 
+
+
 * {
     margin: 0;
     padding: 0;
@@ -5,14 +15,14 @@
 body{
     height: 100vh; 
     box-sizing :border-box border-box;
-    background-color: hwb(0 0% 100% / 0.761);
-    color:rgba(223, 157, 16, 0.856) ;
+    background-color: var(--cor-1);
+    color: var(--cor-2);
     font-size: 20px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
 strong{
-    color: #e85703d6;
+    color: var(--cor-4);
 }
 
 
@@ -22,10 +32,25 @@ strong{
     padding: 5% 10% ;
 }
 
+.apresentacao2{
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    padding: 5% 10% ;
+}
+
+.apresentacao2__conteudo{
+    text-align: center;
+}
+
+.construcao{
+    padding: 200px;
+}
+
 .foto{
     height: 28vh;
     border-radius: 300px;
-    border: 2px solid rgb(246, 242, 242);
+    border: 2px solid var(--cor-3);
 }
 
 
@@ -36,7 +61,7 @@ strong{
 
 .apresentacao__conteudo__titulo{
     font-size:xx-large;
-    color: #00AFE0;
+    color: var(--cor-5)
 }
 
 
@@ -49,7 +74,7 @@ strong{
 }
 
 .apresentacao__conteudo__links__link{
-    border: 2px solid #00AFE0;
+    border: 2px solid var(--cor-5);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,14 +83,14 @@ strong{
     border-radius: 10px;
     font-size: 20px; 
     text-decoration: none;
-    color: rgb(252, 249, 249);
+    color: var(--cor-3);
     gap: 10px;
    
     
 }
 
 .apresentacao__conteudo__links__link:hover{
-    background-color: rgba(0, 0, 0, 0.182);
+    background-color: var(--cor-1);
 }
 
 .apresentacao__conteudo__links__subtitulo{
@@ -73,8 +98,8 @@ strong{
 }
 
 .rodape{
-   color: rgba(250, 247, 247, 0.913); 
-   background-color: #00AFE0;
+   color: var(--cor-3) ;
+   background-color: var(--cor-5);
    padding: 5px;
    text-align: center;
    font-size: 20px;
@@ -94,6 +119,6 @@ strong{
 .cabecalho__menu__link{
     font-size: 20px;
     text-decoration: none;
-    color: #00AFE0;
+    color: var(--cor-5);
      
 }
