--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body{
     box-sizing :border-box border-box;
     background-color: var(--cor-1);
     color: var(--cor-2);
-    font-size: 20px;
+    font-size: 1.5rem;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
 
@@ -61,7 +61,7 @@ strong{
 }
 
 .apresentacao__conteudo__titulo{
-    font-size:xx-large;
+    font-size:2.25rem;
     color: var(--cor-5)
 }
 
@@ -82,7 +82,7 @@ strong{
     width: 180px;
     text-align: center;
     border-radius: 10px;
-    font-size: 20px; 
+    font-size: 1.5rem; 
     text-decoration: none;
     color: var(--cor-3);
     gap: 10px;
@@ -95,7 +95,7 @@ strong{
 }
 
 .apresentacao__conteudo__links__subtitulo{
-    font-size: 20px;
+    font-size: 1.5rem;
 }
 
 .rodape{
@@ -103,7 +103,7 @@ strong{
    background-color: var(--cor-5);
    padding: 5px;
    text-align: center;
-   font-size: 20px;
+   font-size: 1.5rem;
 }
 
 .cabecalho{
@@ -118,7 +118,7 @@ strong{
 }
 
 .cabecalho__menu__link{
-    font-size: 20px;
+    font-size: 1.5rem;
     text-decoration: none;
     color: #00AFE0;
      
