--- a/styles/style.css
+++ b/styles/style.css
@@ -50,6 +50,7 @@ strong{
 
 .foto{
     height: 28vh;
+    width: 50%;
     border-radius: 300px;
     border: 2px solid var(--cor-3);
 }
@@ -79,7 +80,7 @@ strong{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 180px;
+    width: 30%;
     text-align: center;
     border-radius: 10px;
     font-size: 1.5rem; 
