--- a/styles/style.css
+++ b/styles/style.css
@@ -158,7 +158,7 @@ strong{
     }
 
     .cabecalho{
-        padding: 8%;
+        padding: 3%;
     }
 
     .cabecalho__menu{
@@ -166,6 +166,38 @@ strong{
     justify-content: center;
     
     }
+
+    .rodape{
+        color: var(--cor-3);
+        background-color: var(--cor-5);
+        padding: 4px;
+        text-align: center;
+        font-size: 1.1rem;
+    }
+
+    .apresentacao__conteudo__titulo{
+        font-size:2rem;
+    }
+
+    .apresentacao__conteudo__paragrafo{
+        font-size: 1.1rem;
+    }
+
+    .apresentacao__conteudo__links__link{
+        width: 120px;
+        font-size: 1.1rem; 
+        gap: 7px;
+        
+    }
+
+    .apresentacao__conteudo__links{
+        gap: 10px;
+    }
+
+    .apresentacao__conteudo__links__subtitulo{
+        font-size: 1.1rem;
+    }
+
 }
 
 
