--- a/styles/style.css
+++ b/styles/style.css
@@ -13,12 +13,11 @@
     padding: 0;
 }
 body{
-    height: 100vh; 
     box-sizing :border-box border-box;
     background-color: var(--cor-1);
     color: var(--cor-2);
     font-size: 1.5rem;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 strong{
@@ -30,15 +29,15 @@ strong{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 5% 10% ;
-    gap: 3rem;
+    padding: 4% 10% 30% 10%;
+    gap: 5rem;
 }
 
 .apresentacao2{
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    padding: 5% 35% ;
+    padding: 3% 35% ;
 }
 
 .apresentacao2__conteudo{
@@ -46,6 +45,7 @@ strong{
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 3rem;
 }
 
 .construcao{
@@ -53,9 +53,10 @@ strong{
 }
 
 .foto{
-    height: 28vh;
-    border-radius: 180px;
+    height: 40vh;
+    border-radius: 350px;
     border: 3px solid var(--cor-2);
+    
 }
 
 
@@ -67,7 +68,9 @@ strong{
 
 .apresentacao__conteudo__titulo{
     font-size:2.25rem;
-    color: var(--cor-5)
+    color: var(--cor-5);
+    padding-bottom: 10px;
+    
 }
 
 
@@ -100,18 +103,21 @@ strong{
 
 .apresentacao__conteudo__links__subtitulo{
     font-size: 1.5rem;
+   
+    
 }
 
 .rodape{
     color: var(--cor-3);
     background-color: var(--cor-5);
-    padding: 5px;
+    padding: 1px;
     text-align: center;
     font-size: 1.5rem;
 }
 
 .cabecalho{
     padding: 2% 0% 0% 10%;
+    
 }
 
 .cabecalho__menu{
@@ -129,18 +135,19 @@ strong{
 
 .container{
     display: flex;
-    gap: 25px;
+    gap: 55px;
     margin: 5% 10%;
 }
 
 .tamanho__foto{
-    height: 300px;
-    width: 300px;
+    height: 20rem;
+    width: 20rem;
     border-radius: 2rem;
     border: 3px solid var(--cor-2);
 }
 
-@media (max-width:1300px){
+
+@media (max-width:1000px){
     .apresentacao{
         flex-direction: column-reverse;
     }
@@ -166,6 +173,7 @@ strong{
         padding: 4px;
         text-align: center;
         font-size: 1.1rem;
+    
     }
 
     .apresentacao__conteudo__titulo{
@@ -189,6 +197,15 @@ strong{
 
     .apresentacao__conteudo__links__subtitulo{
         font-size: 1.1rem;
+    }
+
+    .foto{
+        height: 25vh;
+    }
+
+    .tamanho__foto{
+        height: 18rem;
+        width: 18rem;
     }
 
 }
